Update to 1.20.5-pre1